@@ -9,8 +9,9 @@ Version 3.5 (XX XXth, 2022) - ""
 *** CORE/CPU ***
 Better handle flickering lamps on Sega/Stern Whitestar machines
 
-*** ROM SUPPORT *** Thanks to inkochnito
+*** ROM SUPPORT *** Thanks to inkochnito, Guru
 New:
+Stern S.A.M. IV Board Tester
 
 Correct Dumps:
 
